<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ligootech.weclean.Registration.Fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/username_box"
                android:gravity="center_vertical">


                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/phonenumber8"
                    android:paddingLeft="10dp"
                    android:paddingRight="50dp"
                    android:lines="1"
                    android:background="@color/Trans"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center_vertical">



                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/ConfirmPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="50dp"
                    android:lines="1"
                    android:background="@drawable/pwd_box"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal"
            android:layout_margin="30dp"
            >

            <Button
                android:layout_margin="5dp"
                android:id="@+id/login_back_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_ivory"
                android:text="@string/back"
                android:textColor="@color/White"
                android:textStyle="bold"
                />

            <Button
                android:layout_margin="5dp"
                android:id="@+id/login_now"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_cadet"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
